# jasons-pre-commit-hooks

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  CHANGELOG.md  README.md  Release process.md  VERSIONING.md  copying.md  flake.lock.license  flake.nix  pyproject.toml
flake-blueprint/: devshell.nix  package.nix
flake-blueprint/checks/: dev-shell-dependencies-for-pre-commit.nix  jnfsg-compliance-check.nix
jasons_pre_commit_hooks/: __init__.py  copying.md  detect_bad_unicode.py  editor_config.ini  flake_lock_updater.py  forbid_paths_that_match.py  repo_style_checker.py  unreleased_commit_checker.py
stubs/: wcwidth.pyi
