# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024 Jason Yundt <jason@jasonyundt.email>

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
    "dulwich",
    "PyYAML",
    "wcwidth"
]
description = "Hooks for <https://pre-commit.com>"
name = "jasons-pre-commit-hooks"
requires-python = ">=3.12"
version = "0.dev0"

# This file doesn’t really contain a license. Instead, it contains the
# repo’s copying information.
[project.license]
file = "copying.md"

[project.scripts]
detect-bad-unicode = "jasons_pre_commit_hooks.detect_bad_unicode:main"
forbid-paths-that-match = "jasons_pre_commit_hooks.forbid_paths:main"
repo-style-checker = "jasons_pre_commit_hooks.repo_style_checker:main"

[project.urls]
Homepage = "https://github.com/Jayman2000/jasons-pre-commit-hooks"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.setuptools]
include-package-data = true
packages = ["jasons_pre_commit_hooks"]
