# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024 Jason Yundt <jason@jasonyundt.email>

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
    "dulwich",
    "PyYAML",
    "python-dateutil",
    "semver",
    "wcwidth"
]
description = "Hooks for <https://pre-commit.com>"
dynamic = ["version"]
name = "jasons-pre-commit-hooks"
requires-python = ">=3.12"

# This file doesn’t really contain a license. Instead, it contains the
# repo’s copying information.
[project.license]
file = "copying.md"

# editorconfig-checker-disable
[project.scripts]
detect-bad-unicode = "jasons_pre_commit_hooks.detect_bad_unicode:main"
forbid-paths-that-match = "jasons_pre_commit_hooks.forbid_paths_that_match:main"
repo-style-checker = "jasons_pre_commit_hooks.repo_style_checker:main"
unreleased-commit-checker = "jasons_pre_commit_hooks.unreleased_commit_checker:main"

# editorconfig-checker-enable
[project.urls]
Homepage = "https://github.com/Jayman2000/jasons-pre-commit-hooks"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.setuptools]
include-package-data = true
packages = ["jasons_pre_commit_hooks"]

[tool.setuptools_scm]
